fixed scrollbar issues in body

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   background-repeat: no-repeat;
   color: #dbdbdf;
   min-height: 100svh;
+  overflow: hidden;
 }
 
 code {
